syntax = "proto3";

option csharp_namespace = "grpcSample.contract";

package Students;

import "google/protobuf/empty.proto";

service Students {
    rpc AddStudent (NewStudentRequest) returns (StudentDto) { }
	rpc GetStudent (GetStudentRequest) returns (StudentDto) { }
	rpc GetAllStudents (google.protobuf.Empty) returns (stream .Students.StudentDto) { }
}

message NewStudentRequest {
    string Name = 1;
}

message GetStudentRequest {
	int32 Id = 1;
}

message StudentDto {
    int32 Id = 1;
    string Name = 2;
}